--- a/back/package.json
+++ b/back/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
     "passport": "^0.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
