--- a/back/package.json
+++ b/back/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/JoMa-Team/SkillUpp#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.0",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.1",
     "passport": "^0.6.0"
   }
 }
